<resources>
    <string name="app_name">Android Course Final Project</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="google_api_key">AIzaSyAauC7BNdLmfzrrfyqHydliJucSypQ6Ncc</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login_details_not_match">Email or Password not Match.</string>
    <string name="input_cannot_empty">Inputs cannot be Empty.</string>
    <string name="user_already_exists">User Already Exists.</string>
    <string name="back">Back</string>
    <string name="password_again">Password Again</string>
    <string name="two_password_not_identical">Two Password Inputs are not Identical.</string>
    <string name="item_name">Item Name:</string>
    <string name="item_thumbnails">Item Thumbnails:</string>
    <string name="category">Category:</string>
    <string name="trade_location">Trade Location:</string>
    <string name="location_not_set">Location not Set</string>
    <string name="choose_location">Choose Location</string>
    <string name="name">Name</string>
    <string name="upload">Upload</string>
    <string name="title_activity_maps_select_loc">MapsSelectLocActivity</string>
    <string name="descriptions">Descriptions:</string>
    <string name="preferred_trades_etc">(Preferred Trades, etc...)</string>
    <string name="owner_none">Owner: None</string>
    <string name="category_none">Category: None</string>
</resources>